--- a/css/auth.css
+++ b/css/auth.css
@@ -1,80 +1,75 @@
-input {
-    margin: 5px auto 30px auto;
-    display: block;
-    width: 250px;
-    border: 1px solid #1e8383;
-    border-radius: 3px;
-    height: 32px;
-    text-indent: 30px;
-    caret-color: #5f5f5f;
-    background-image: url('../img/icons/SVG/bright\ logo\ without\ text.svg');
-    background-repeat: no-repeat;
-    background-position: 5px center;
-    background-size: 20px;
-  
-    
-   
+main {
+	width: 100%;
+	height: 110vh !important;
 }
 
- .inp-img
- {
-     width: 10px;
-     position: relative
- }
+p {
+	width: 250px;
+	text-align: center;
+	justify-content: center;
+	display: flex;
+	margin: 0 auto;
+	color: white !important;
+}
 
-main {
-    width: 100%;
-    height: 110vh !important;
+input {
+	margin: 5px auto 30px auto;
+	display: block;
+	width: 250px;
+	border: 1px solid #1e8383;
+	border-radius: 3px;
+	height: 32px;
+	text-indent: 30px;
+	caret-color: #5f5f5f;
+	background-image: url('../img/icons/SVG/bright\ logo\ without\ text.svg');
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	background-size: 20px;
+}
+
+.inp-img {
+	width: 10px;
+	position: relative
 }
 
 .title {
-    text-align: center;
-    color: #5f5f5f;
-    font-family: roboto;
-    text-transform: uppercase;
-    margin: 20px;
-
+	text-align: center;
+	color: #5f5f5f;
+	font-family: roboto;
+	text-transform: uppercase;
+	margin: 20px;
 }
 
 .auth-content-container {
-    display: block;
-    color: white;
-    width: 400px;
-    margin: 0 auto;
-    height: 350px;
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
-    background-color: #84d1d1;
-    opacity: 0.8;
-
+	display: block;
+	color: white;
+	width: 400px;
+	margin: 0 auto;
+	height: 350px;
+	justify-content: center;
+	text-align: center;
+	padding: 20px;
+	background-color: #84d1d1;
+	opacity: 0.8;
 }
 
 button {
-    width: 250px;
-    background-color: #1e8383;
-    border: none;
-    border-radius: 3px;
-    height: 32px;
-    color: white;
+	width: 250px;
+	background-color: #1e8383;
+	border: none;
+	border-radius: 3px;
+	height: 32px;
+	color: white;
 }
-.txt-btn
-{
-    width: 250px;
-    background-color: unset;
-    border: none;
-    border-radius: unset;
-    height: unset;
-    color: unset;
-    margin-top: 40px;
-    color: white !important;
-    font-size: 15px;
-}
-p {
-    width: 250px;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    margin: 0 auto;
-    color: white !important;
+
+.txt-btn {
+	width: 250px;
+	background-color: unset;
+	border: none;
+	border-radius: unset;
+	height: unset;
+	color: unset;
+	margin-top: 40px;
+	color: white !important;
+	font-size: 15px;
 }
