--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,65 @@ h2 {
 	cursor: pointer;
 }
 
+.q-container
+{
+	width: 60px;
+	border-radius: 30px;
+	position: fixed;
+	height: 60px;
+	right: 50px;
+	bottom: 50px;
+
+		background: rgb(110,110,110);
+		background: radial-gradient(circle, rgba(110,110,110,1) 0%, rgba(178,176,176,1) 100%);
+
+	background-size: 700px;
+	transition: .2s;
+	transition-timing-function: ease-in;
+	cursor: pointer;
+	text-align: center;
+	opacity: 0.3;
+	z-index: 2;
+	animation: bg-anima 8s normal infinite;
+	box-shadow: 1px 1px 2px 2px rgba(22, 22, 22, 0.5);
+}
+
+.q-container:hover 
+{
+	width: 280px;
+	opacity: .9;
+
+	
+}
+
+.q-container:hover .presq::before
+{
+	content: "for help press ALT+ ";
+	display: inline;
+	opacity: .8;
+	font-weight: normal;
+	font-size: 25px;
+	
+}
+
+
+.presq
+{
+
+	font-weight: bold;
+	font-size: 30px!important;
+	transition: .4s;
+	font-family: 'Niveau Grotesk';
+	width: 30px;
+	text-align: start;
+	margin-left: 18px;
+	margin-top: 13px;
+	width: 250px!important;
+	overflow: hidden;
+color: rgb(36, 36, 36);
+	
+	
+}
 .history-table td,
 .exc-table td {
 	text-align: center;
@@ -302,7 +361,12 @@ tr {
 	bottom: 50px;
 	position: absolute;
 }
-
+.gb-btn
+{
+   right: 140px; 
+    bottom: -60px; 
+    position: absolute;
+}
 .logo {
 	width: 90px;
 	left: 60px;
@@ -452,4 +516,10 @@ tr {
 	100% {
 		transform: rotate(360deg);
 	}
+}
+@keyframes bg-anima
+{
+0%{background-position: -10% -80%;}
+50%{background-position: -90% 60%;}
+100%{background-position: -10% -80%;}
 }
